<resources>
    <string name="app_name">Axolingo</string>
    <string name="register_title">Registro</string>
    <string name="user">Usuario</string>
    <string name="email">Correo</string>
    <string name="password">Contraseña</string>
    <string name="confPass">Confirmar contraseña</string>
    <string name="next">Continuar</string>
    <string name="login_title">Inicio de Sesión</string>
    <string name="forgot_password">¿Olvidó su contraseña?</string>
    <string name="reg_button">¿No tiene cuenta?\nRegistrarse</string>
</resources>